tests/compile_fail/pod_bool_field.stderr
error[E0277]: the trait bound `bool: hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not satisfied
 --> tests/compile_fail/pod_bool_field.rs:8:1
  |
8 | #[pod]
  | ^^^^^^ the trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not implemented for `bool`
  |
  = help: the following other types implement trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod`:
            ()
            AccountHeader
            BadBool
            ManuallyDrop<T>
            Option<T>
            PhantomData<T>
            PhantomPinned
            SegmentDescriptor
          and $N others
note: required by a bound in `__FieldPodProof`
 --> tests/compile_fail/pod_bool_field.rs:8:1
  |
8 | #[pod]
  | ^^^^^^ required by this bound in `__FieldPodProof`
  = note: this error originates in the attribute macro `pod` (in Nightly builds, run with -Z macro-backtrace for more info)
